--- a/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -350,8 +350,8 @@ CSA_liberty_ships:0 "자유 함"
 CSA_liberty_ships_desc:0 "세계는 생디칼리즘을 위해 도와주는 우리의 배를 보게 될 것입니다."
 CSA_war_plan_black:0 "흑색 전쟁 계획"
 CSA_war_plan_black_desc:0 "지금은 거대한 반동 제국인 카이저라이히를 공격할 시간입니다. 더 이상 독일 제국이 세계가 그들의 족쇄에 묶이게 할 수 없습니다. 더 이상 그들의 자본주의적 노예제를 오래 지속시키도록 할 수 없습니다. 우리는 싸울 것입니다. 우리는 카이저라이히의 족쇄를 부셔버릴 겁니다!"
-CSA_join_phalanstere:0 "Join the Phalanstere"
-CSA_join_phalanstere_desc:0 "Now that we are part of the International, we should do our part and join the Phalanstere. American scientific knowledge shall combine with English and French to help syndicalism destroy capitalism around the world."
+CSA_join_phalanstere:0 "팔랑스테르 가입"
+CSA_join_phalanstere_desc:0 "우리는 지금 인터네셔널에 가입했기 때문에, 우리는 또한 팔랑스테르에 가입해야 합니다. 미국의 과학적 지식은 영국과 프랑스와 결합되면서 세계의 자본주의를 파괴시키는데 도움을 줄 것입니다."
 CSA_war_plan_red:0 “적색 전쟁 계획"
 CSA_war_plan_red_desc:0 "캐나다 안의영국 왕실은 미국 인민들의 매우 위험한 적이 되었습니다. 우리는 반드시 어떻게 그들의 동맹과 캐나다인을 상대로 싸울지 계획해야 합니다."
 CSA_great_northern_wall:0 "대규모 북부 장벽“
@@ -417,7 +417,7 @@ scientific_phalanstere:0 "The scientific wing of the Phalanstere organisation ha
 
 ### Events ###
 combinedsyndicates.1.t:0 "두 번째 미국 혁명"
-combinedsyndicates.1.d:0 "결집된 미국의 생디칼리즘 중앙 위원회는 과거 미국의 모든 권력을 합법적으로 노동자에게 전달했다는 선언을 발표했습니다. 대륙 생디칼리스트의 회의에서 행사되었고 외부의 적으로부터 혁명 생디칼리즘 수비대가 이것을 지킬 것 입니다. 이 회의의 새로운 서기장은..."
+combinedsyndicates.1.d:0 "미국 노동조합 중앙 위원회는 과거 미국의 모든 권력을 합법적으로 노동자에게 전달했다는 선언을 발표했습니다. 대륙 생디칼리스트의 회의에서 행사되었고 외부의 적으로부터 혁명 생디칼리즘 수비대가 이것을 지킬 것 입니다. 이 회의의 새로운 서기장은..."
 combinedsyndicates.1.a:0 "제임스 P. 캐논, 노동자 권리의 증진"
 combinedsyndicates.1.b:0 "막스 샤흐트만, 주요 산업의 국유화"
 combinedsyndicates.1.c:0 "폴 매틱, 자본주의 체제의 모든 흔적 제거"
@@ -434,7 +434,7 @@ combinedsyndicates.3.a:0 "5 Year Plan"
 combinedsyndicates.3.b:0 "3 Year Plan"
 combinedsyndicates.3.c:0 "1 Year Plan"
 combinedsyndicates.4.t:0 "토지와 농업 개혁"
-combinedsyndicates.4.d:0 "지역과 농업 개혁은 생디칼리즘에게 뜨거운 감자입니다. 농민들에게 중앙 정부에 의한 직접적인 냉혹한 집단화 계획을 실행해야 할까요? 아니면 지역 생디칼리트에게 농민을 운영해야 할까요? 다른 방안으로는 농민에게 일정한 가격을 보장하고, 제한된 시장에서 자신의 농작물을 판매하도록 허용 할 수 있을 겁니다."
+combinedsyndicates.4.d:0 "지역과 농업 개혁은 생디칼리스트에게 뜨거운 감자입니다. 농민들에게 중앙 정부에 의한 직접적인 냉혹한 집단화 계획을 실행해야 할까요? 아니면 지역 생디칼리트에게 농민을 운영해야 할까요? 다른 방안으로는 농민에게 일정한 가격을 보장하고, 제한된 시장에서 자신의 농작물을 판매하도록 허용 할 수 있을 겁니다."
 combinedsyndicates.4.a:0 "집단화를 시작한다."
 combinedsyndicates.4.b:0 "지방 생디칼리즘 정부에게 농민 운영을 맡긴다.."
 combinedsyndicates.4.c:0 "토지를 재분배하고 제한적 시장 거래를 허용한다."
@@ -467,10 +467,10 @@ combinedsyndicates.12.t:0 "시민으로부터 자원"
 combinedsyndicates.12.d:0 "노동조합들과 CSA의 노동자들이 러스트 벨트의 많은 자원들을 인민의 정부에게 주었습니다."
 combinedsyndicates.12.a:0 "충분하군"
 combinedsyndicates.13.t:0 "분기점"
-combinedsyndicates.13.d:0 "The shooting had barely started when the CSA began to disintegrate. The loose coalition of socialists began to form sides. The Totalists began to form a government in Washington and were trying to exert their authority over the country. The Syndicalists were working with the trade unions to form local councils to run the recently conquered areas and were trying to buck the central authority. The Anarchists were not interested in either system and were causing trouble throughout the country."
-combinedsyndicates.13.a:0 "Side with the Totalists"
-combinedsyndicates.13.b:0 "Side with the Anarcho-syndicalists"
-combinedsyndicates.13.c:0 "Side with the Trade Unionists"
+combinedsyndicates.13.d:0 "CSA의 분열이 시작되었습니다. 사회주의자들의 연합은 외각지대부터 느슨해졌죠. 전체주의자들은 워싱턴에서 정부 체제를 구축하고 국가의 권력을 행사하는 시도를 할려고 합니다. 생디칼리스트들은 노동조합과 함께 지역의회를 구성하고 최근 정복된 지역을 운영하면서 중앙 정부의 권위에 대항하고 있습니다. 아나키스트는 이 체제에 흥미를 가지지 않고 국가 전역에 문제를 일으키고 있습니다.“
+combinedsyndicates.13.a:0 "전체주의자 편에 든다."
+combinedsyndicates.13.b:0 "무정부-생디칼리스트 편에 든다."
+combinedsyndicates.13.c:0 "노동조합 편에 든다."
 combinedsyndicates.15.t:0 "남부의 저항"
 combinedsyndicates.15.d:0 "사회주의자들이 즉시 남부의 인종 차별 차별 정책을 중단시키자. 인종간의 긴장과 폭력이 즉시 발생했습니다. 남부 전역의 잔존한 일부 롱의 미니트맨들이 kkk단과 혁명과 우리에 대항하는 조약을 맺었습니다. 그들은 지역 농촌들을 테러하면서 많은 린치 사건을 일으키고 있습니다."
 combinedsyndicates.15.a:0 "반동주의자들을 비난해라"
@@ -481,9 +481,8 @@ combinedsyndicates.17.t:0 "남부에 평화가 오다"
 combinedsyndicates.17.d:0 "인민 해방군이 남부 전역에 배치되고, 혁명을 남부에 혁명을 정착시키도록 도움에 따라서, 평화와 질서가 마침내 남부에 도착했습니다. 미국에서 모든 사람들을 위한 평등이라는 혁명적 이상은 남부에 도착한 겁니다."
 combinedsyndicates.17.a:0 "마침내!!"
 
-combinedsyndicates.18.t:0 "10 Years Since Bonnie and Clyde Passed Away"
-combinedsyndicates.18.d:0 "These two heroes did a lot of good for our nation then, as they were standing up against the capitalist government! They deserve a special day!"
-combinedsyndicates.18.a:0 "Happy Bonnie and Clyde day, mum."
+combinedsyndicates.18.t:0 “보니와 클라이드가 세상을 떠난지 10년이 되었습니다."
+combinedsyndicates.18.d:0 "이 주 영웅들은 자본주의 정부에 맞서 싸움으로써 우리 국가에 많은 도움이 되었습니다! 그들은 기념할만한 자격이 있습니다!"
 combinedsyndicates.19.t:0 "잭 리드가 병에 들다."
 combinedsyndicates.19.d:0 "중앙 위원회의 수장인 잭 리드의 신체적 건강은 약화되고 있습니다. 이것을 더 이상 숨길 수 없기 때문에, 대중들에게 발표해야 했죠. 이 질병의 원인에 대해서 알 수 없습니다. 그러나 이 질병의 영향으로 그의 생명이 줄어드는 것은 분명합니다. 물론 그의 혁명에 대한 열정은 시들지 않았지만, 그의 신체는 혁명을 이끌기 어렵습니다."
 combinedsyndicates.19.a:0 "하필 이런 일이...."
@@ -513,46 +512,47 @@ combinedsyndicates.25.t:0 "새로운 행정"
 combinedsyndicates.25.d:0 "오늘의 주요한 문제는 우리가 미래에 운용할 행정체제에 대한 겁니다. 두 개의 주요한 계획이 상정되었는데, 첫 번째는 연합주의자에 의해 상정된 것으로, 새로운 행정은 노동조합들에 근간하여 민주적으로 그리고 분권적으로 조직되어야 한다고 주장합니다. 반면에 중앙 집권주의자들은 강력한 하향식 행정부가 연방정부 통해 더 많은 자금을  교육에 제공해서 분권화된 모형보다 미국에 더 나을 것이라고 반박했습니다. 연방주의자들은 연합주의자와 중앙 집권주의자로 나뉘어져서있는 상태입니다."
 combinedsyndicates.25.a:0 "새로운 공무 제도"
 combinedsyndicates.25.b:0 "생디칼리즘 관료제"
-combinedsyndicates.26.t:0 "Centralist Victory"
-combinedsyndicates.26.d:0 "The Second convention is nearly over and it looks like the Centralists have turned out to be the victors in the convention. Their plan for a centralised republic can now be put into motion."
-combinedsyndicates.26.a:0 "Long Live America"
-combinedsyndicates.27.t:0 "Federalist Victory"
-combinedsyndicates.27.d:0 "The Second convention is nearly over and it looks like the Federalists have turned out to be the victors in the convention. Their plan for a federal republic balancing the powers of the states and the federal government can now be put into motion."
-combinedsyndicates.27.a:0 "Long Live America"
-combinedsyndicates.28.t:0 "Unionists Victory"
+combinedsyndicates.26.t:0 "중앙 집권주의자의 승리"
+combinedsyndicates.26.d:0 "두 번째 헌법 회의는 끝나고, 아마 이 회의에서 승자는 중앙집권 주의자들 같습니다. 중앙 집권된 공화국을 위한 그들의 계획은 시작되었습니다."
+combinedsyndicates.26.a:0 "미국 만세!"
+combinedsyndicates.27.t:0 "연방주의자의 승리"
+combinedsyndicates.27.d:0 "두 번째 헌법 회의는 끝나고, 아마 이 회의에서 승자는 연방주의자들 같습니다. 연방 정부와 주들 간의 균형이 맞춰진 연방 공화국을 위한 그들의 계획은 시작 되었습니다."
+combinedsyndicates.27.a:0 "미국 만세!"
+combinedsyndicates.28.t:0 "연합주의자의 승리"
 combinedsyndicates.28.d:0 "The Second convention is nearly over and it looks like the Federalists have turned out to be the victors in the convention. Their plan for a federal republic balancing the powers of the states and the federal government can now be put into motion."
-combinedsyndicates.28.a:0 "Long Live America!"
-combinedsyndicates.29.t:0 "Electing a General Secretary"
-combinedsyndicates.29.d:0 "Now that we have formalised our republic into decentralised confederation, it is time to elect a General Secretary to lead our Republic. Three people have stepped forward that could be potential leaders. Elizabeth Gurley Flynn, Benjamin Gitlow, and Norman Thomas. The question now is who shall the people choose?"
-combinedsyndicates.29.a:0 "Elizabeth Gurley Flynn"
-combinedsyndicates.29.b:0 "Benjamin Gitlow"
-combinedsyndicates.29.c:0 "Norman Thomas"
-combinedsyndicates.99.t:0 "Electing a General Secretary"
-combinedsyndicates.99.d:0 "Now that our republic has been formalised into a federal republic balancing the power of the states with the power of the federal government, it is time to to choose a general secretary to lead America. Three people have stepped forward that could be potential leaders. Elizabeth Gurley Flynn, Benjamin Gitlow, and Norman Thomas. The question now is who shall the people choose?"
-combinedsyndicates.99.a:0 "Elizabeth Gurley Flynn"
-combinedsyndicates.99.b:0 "Benjamin Gitlow"
-combinedsyndicates.99.c:0 "Norman Thomas"
-combinedsyndicates.100.e:0 "Earl Browder"
-combinedsyndicates.100.t:0 "Electing a General Secretary"
-combinedsyndicates.100.d:0 "Now that we have formalised the republic into a centralised control republic. It is time to to elect a General Secretary to lead the republic. Three people have stepped up and been nominated as possible leaders. Benjamin Gitlow, William Z. Foster and Earl Browder. The question now is whom shall be chosen?"
-combinedsyndicates.100.a:0 "Earl Browder"
-combinedsyndicates.100.b:0 "William Z. Foster"
-combinedsyndicates.100.c:0 "Benjamin Gitlow"
-combinedsyndicates.101.t:0 "Choosing a Deputy Secretary"
+combinedsyndicates.28.a:0 "미국 만세!"
+combinedsyndicates.29.t:0 "총 서기 선출"
+combinedsyndicates.29.d:0 "우리가 분권화된 연합으로 우리의 공화국을 만들었기 때문에, 지금은 우리의 공화국을 이끌 총서기를 뽑을 시간입니다. 3명의 사람이 총 서기 후보로 거론되고 있습니다. 엘리자베스 걸린 플린, 밴자민 길트로우, 노먼 토마스. 이 문제에 대해서 국민들은 어떤 선택을 할까요?"
+combinedsyndicates.29.a:0 "엘리자베스 걸린 플린"
+combinedsyndicates.29.b:0 "밴자민 길트로우"
+combinedsyndicates.29.c:0 "노먼 토마스"
+combinedsyndicates.99.t:0 "총 서기 선출"
+combinedsyndicates.99.d:0 "우리가 연방정부와 주간의 균형을 맞춘 우리의 공화국을 만들었기 때문에, 지금은 우리의 공화국을 이끌 총서기를 뽑을 시간입니다. 4명의 사람이 총 서기 후보로 거론되고 있습니다. 엘리자베스 걸린 플린, 밴자민 길트로우, 노먼 토마스, 얼 브라우더. 이 문제에 대해서 국민들은 어떤 선택을 할까요?"
+combinedsyndicates.99.a:0 "엘리자베스 걸린 플린"
+combinedsyndicates.99.b:0 "밴자민 길트로우"
+combinedsyndicates.99.c:0 "노먼 토마스"
+combinedsyndicates.100.e:0 "얼 브라우더"
+combinedsyndicates.100.t:0 "총 서기 선출"
+combinedsyndicates.100.d:0 "우리가 중앙 집권화 된 우리의 공화국을 만들었기 때문에, 지금은 우리의 공화국을 이끌 총서기를 선출 할 시간입니다. 3명의 사람이 총 서기 후보로 지명 할 수 있습니다. 얼 브라우더, 밴자민 길트로우, 월리엄 Z 포스터. 이 문제에 대해서 누가 선택될까요?"
+combinedsyndicates.100.a:0 "얼 브라우더"
+combinedsyndicates.100.b:0 "월리엄 Z 포스터"
+combinedsyndicates.100.c:0 "밴자민 길트 로우"
+combinedsyndicates.101.t:0 "부서기 지명"
 combinedsyndicates.101.d:0 "Now that Elizabeth Gurley Flynn has been chosen as the General Secretary, she must choose who will assist her at the helm of government as her Deputy Secretary."
 combinedsyndicates.101.a:0 "Carlo Tresca's longstanding friendship serves him well"
 combinedsyndicates.101.b:0 "James P. Cannon's union links serve him well"
 combinedsyndicates.101.c:0 "Arturo Giovanitti's hard-nosed approach wins favours"
 combinedsyndicates.101.e:0 "Eugene Dennis's union links sweep him to power"
-combinedsyndicates.102.t:0 "Choosing a Deputy Secretary"
+combinedsyndicates.102.t:0 "부서기 지명"
 combinedsyndicates.102.d:0 "Having come into power, Norman Thomas must decide who can help him with the Grand American Project."
 combinedsyndicates.102.a:0 "James P. Cannon's union links serve him well"
 combinedsyndicates.102.b:0 "Joseph P. Lash has the right credentials"
 combinedsyndicates.102.c:0 "Elizabeth Gurley Flynn's attitude wins her the job"
 combinedsyndicates.102.e:0 "Carlo Tresca's economic programs get him the job"
-combinedsyndicates.103.t:0 "Appointment of a New General Secretary"
+combinedsyndicates.103.t:0 "새로운 부서기 지명"
 combinedsyndicates.103.d:0 "Having come into power, Ben Gitlow has to figure out who will help him run the country."
 combinedsyndicates.103.a:0 "Max Schactman's friendship serves him well"
+
 combinedsyndicates.103.b:0 "Carlo Tresca's union links bring him into the fold"
 combinedsyndicates.103.c:0 "Robert M. La Follette's attitude wins him the task"
 combinedsyndicates.103.e:0 "Elizabeth Gurley Flynn's attitude wins her the job"
@@ -561,29 +561,28 @@ combinedsyndicates.104.a:0 "Bayard Rustin's unique viewpoint gets him in"
 combinedsyndicates.104.b:0 "Jay Fox's economic programs get him the job"
 combinedsyndicates.104.c:0 "Eugene Dennis's union links sweep him to power"
 combinedsyndicates.104.e:0 "Merge the Posts! Centralisation starts here!"
-combinedsyndicates.105.t:0 "Choosing a Deputy Secretary"
+combinedsyndicates.105.t:0 "부 서기 지명"
 combinedsyndicates.105.d:0 "Now that Earl Browder has been elected as the General Secretary, he must choose who will assist him at the helm of government as his Deputy Secretary."
 combinedsyndicates.105.a:0 "Paul Mattick's hard-nosed approach wins favours"
 combinedsyndicates.105.b:0 "William Z. Foster's genius secures him the job"
 combinedsyndicates.105.c:0 "James W. Ford's longstanding friendship serves him well"
 combinedsyndicates.105.e:0 "Micheal Gold's popularity gets him the office"
-combinedsyndicates.106.t:0 "Worker's Confederation"
-combinedsyndicates.106.d:0 "The United States has been remade into a decentralised democratic Confederation of Socialistic States. Power is shared largely between the states themselves with the federal government has been weakened. Though, the Federal government is not totally weak to be irrelevant, it has power to help keep the revolution going as well as dealing with foreign governments. The office of the President and Vice President have been replaced by popularly elected General Secretary and Deputy Secretary positions. Congress has been remade into a unicameral legislature. The ideals of Democratic Confederalism have been implemented throughout the government. The new government is truly for the people, by the people, and of the people."
-combinedsyndicates.106.a:0 "Solidarity Forever!"
-combinedsyndicates.107.t:0 "Worker's Federation"
-combinedsyndicates.107.d:0 "The United States has been reforged into a federal republic. The office of President and vice president have been replaced by a General Secretary and deputy secretary that are elected by the people as a whole and not an electoral college. Power is shared between the local States and the Federal government. The Senate has been abolished while the House of Representatives has been strengthened making Congress a unicameral legislature. The ideals of Democratic Socialism are implemented in all aspects of government from the top to the bottom. The new government is truly for the people, by the people, and of the people."
-combinedsyndicates.107.a:0 "Solidarity Forever!"
-combinedsyndicates.108.t:0 "United Socialistic States of America"
-combinedsyndicates.108.d:0 "The United States has been reforged into a centralised republic. The office of president and vice president have been replaced by the offices of General Secretary and Deputy Secretary that are chosen from among the Socialist Party itself. The central government has been strengthened and most of the powers and responsibilities of the state it has taken up. The concept of Democratic Centralism has been established and implemented throughout the government. America has taken a new step into the future and united we shall not fail."
-combinedsyndicates.108.a:0 "Solidarity Forever!"
+combinedsyndicates.106.t:0 "노동자 연합"
+combinedsyndicates.106.d:0 "미국은 이제 분권화된 민주적 사회주의 주 연합으로 다시 탄생되었습니다. 권력은 주들 사이로 나눠졌고, 연방정부는 약해졌습니다. 비록 연방 정부가 무시 될 정도로 약해지지는 않았지만요. 정부는 혁명을 지키고, 외국정부와 외교를 수행할만한 권력을 보유 할 것입니다. 대통령과 부통령은 대중적으로 선출된 총서기와 부서기로 바뀌었고, 이회는 단원제로 바뀌었죠. 민주적 연합의 이상은 정부 전역에서 실행될 것입니다. 새 정부는 진실로 인민을 위한, 인민에 의한, 인민의 것입니다."
+combinedsyndicates.106.a:0 "연대는 영원하리!"
+combinedsyndicates.107.t:0 "노동자 연방"
+combinedsyndicates.107.d:0 "미국은 연방 공화국으로 재창조 되었습니다. 대통령과 부통령은 선거인단 대신 대중에 의해 직접 선출되는 총서기와 부서기로 바뀌었죠. 권력은 지방 주들과 연방들에게 적절히 나눠졌습니다. 상원은 폐지되었고, 대신 하원이 단원제가 되면서 강해졌습니다. 민주적 사회주의라는 이상은 정부의 모든 측면에서 위에서부터 아래로 실행 될 것입니다. 새 정부는 진실로 인민을 위한, 인민에 의한, 인민의 것입니다."
+combinedsyndicates.107.a:0 "연대는 영원하리!"
+combinedsyndicates.108.t:0 "미 사회주의 합중국"
+combinedsyndicates.108.d:0 "미국은 중앙 집권화된 공화국으로 재창조 되었습니다. 대통령과 부통령은 사회당이 선택하는 총서기와 부서기로 바뀌었죠. 중앙 정부는 강화되었고 주가 가지고 있었던 책임과 권력을 가지고 있습니다. 민주집중제 개념은 정부 전역에 이루어질 것이고 실행 될 것입니다. 미국은 미래를 향한 새로운 발걸음을 내딛었으며, 우리는 절대로 패배하지 않을 것입니다."
+combinedsyndicates.108.a:0 "연대는 영원하리!"
 
-combinedsyndicates.109.t:0 "A new Flag for America"
-combinedsyndicates.109.d:0 "With the constitutional convention now underway, one of the topics that the delegates have is a new flag for the country. Three new designs have been proposed. The first being the stars and stripes but with the grain and gear symbol in the canton. The second proposal is stripped flag with the grain and gear symbol in the centre and a border with stars around the flag. The third is a blue eagle clutching a gear and lighting bolts on a red field. The fourth proposal is to keep the current flag. What shall the people decide on? "
-combinedsyndicates.109.a:0 "Choose the Stars and Stripes flag "
-combinedsyndicates.109.b:0 "Choose the Bordered Stripes flag"
-combinedsyndicates.109.c:0 "Choose the Blue Eagle flag"
-combinedsyndicates.109.e:0 "Choose to keep the current flag"
-
+combinedsyndicates.109.t:0 "미국의 새로운 국기"
+combinedsyndicates.109.d:0 "헌법 회의가 진행되는 도중에, 미국의 새로운 국기라는 하나의 주제가 대표단들 사이에 생겼습니다. 3개의 새로운 디자인이 제안되었습니다. 첫 번째 제안은 기존 성조기가 비슷하지만 곡식과 기어 상징이 위쪽 구석의 주를 대체했습니다. 두 번째 제안은 곡식과 기어 상징이 중앙에 있는 줄무늬 국기로 국기 외각에는 별이 있습니다. 세 번째 제안은 푸른 독수리가 적기를 바탕으로 가벼운 볼트와 기어를 꽉 움켜잡는 국기입니다. 네 번째 제안은 현 국기를 유지하는 것입니다. 사람들은 어떤 선택을 원할까요? "
+combinedsyndicates.109.a:0 "성조기형 국기를 채택하다"
+combinedsyndicates.109.b:0 "줄무늬형 국기를 채택하다"
+combinedsyndicates.109.c:0 "독수리형 국기를 채택하다"
+combinedsyndicates.109.e:0 "지금의 국기를 유지하기로 한다."
 
 combinedsyndicates.43.t:0 "The New England General Strike"
 combinedsyndicates.43.d:0 "A general strike has been called throughout New England and many workers in the cities throughout New England from Boston to Bangor to Buffalo have gone on strike for better working conditions. Leaders throughout New England are discussing how to resolve the matter. Some suggest doing nothing claiming the workers will tire themselves out rather quickly. Others are claiming that this is a plot by the CSA to take control of New England and suggest we crackdown hard on them. Finally others are suggesting that we implement reforms in the workplace to help buy off the striking workers."
