--- a/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
@@ -454,17 +454,16 @@ worldnews.106.a:0 "흥미롭군"
 
 worldnews.250.t:0 "-"
 
-worldnews.251.t:0 "The Fall of London" #German"
-worldnews.251.d:0 "Reports from London confirm that the English capital has been captured by advancing German troops after long, staged battles across the Thames river. Union forces put up stiff resistance, hoping to delay the German forces for as long as possible, but were eventually beaten back.\n\nFor the first time since William the Conqueror, London has fallen to a foreign invader. The atmosphere in London is heavy, with gunfire still ringing in the night as the Union forces long left, leaving only protesters and German military police fighting in the streets."
-worldnews.251.a:0 "This is only a temporary setback. We will reorganise and push the German back!"
-worldnews.251.b:0 "This is the beginning of the end. We will set right what once went wrong."
-worldnews.251.c:0 "With London in German hands, defeat of Britain is inevitable."
+worldnews.251.t:0 "런던 함락" #German"
+worldnews.251.d:0 "런던에서의 보고서에 따르면 템즈 강을 가로 지르는 기나긴 전투 이후 독일 군대의 진격에 영국의 수도가 점령되었습니다. 연합군은 가능한 한 오랫동안 독일 군대를 지연시키려고 노력했고 거센 저항을 했지만 결국 패배했습니다. \n\n정복자 윌리엄 이후 처음으로 런던은 외국의 침략자의 손에 떨어졌습니다. 런던의 분위기는 무겁고, 연합군이 떠난 가운데 홀로 남은 저항군과 독일군 경찰이 거리에서 싸우면서 여전히 거리에는 총소리가 들리고 있습니다."
+worldnews.251.a:0 "이것은 작전상 후퇴에 불과핟. 우리는 군대를 재조직할것이고 독일군을 밀어낼것이다!"
+worldnews.251.b:0 "이것은 전쟁의 끝의 시작이다. 우리는 잘못된 것을 바로 잡을 것이다."
+worldnews.251.c:0 "런던이 독일군에게 함락됬다면, 영국의 패배는 불가피하다."
 worldnews.251.e:0 "Germany now holds a very important bargaining chip for our return to the continent."
 
-worldnews.252.t:0 "The Fall of Chicago" #U"
-worldnews.252.d:0 "Federal forces has been pushing towards the Syndicate States' temporary capital of Chicago for a while now. Reports are now coming in of Chicago's capture by advancing US troops. Reed's current whereabouts are unknown, but it is believed that he has fled the city with militia units.\n\nReports indicate that military police has begun rounding up and arresting prisoner of wars and important Syndicalist figures and that many fires are spreading unchecked through the city's highrise districts. Is this the end of the Syndicate experiment in America?"
-worldnews.252.a:0 "The fight is not over until they've got every single one of us!"
-worldnews.252.b:0 "We are on your tail, Reed. You will be tried for your crimes, you and your militia!"
+worldnews.252.t:0 "시카고함락" #U"
+worldnews.252.d:0 "연방군은 시카고의 신디케이트 국가의 임시 수도를 향해 진격하고 있었습니다. 보고에 의하면 시카고는 연방군에 의해 함락되었습니다. 리드의 현재 위치는 알려지지 않았지만 민병대와 함께 도시를 탈출했다고 전해지고 있습니다. \n\n보고에 따르면 헌병대들 전쟁 포로와 생디칼리스트 요인들을 체포하고있고, 도시의 고층 지구에는 총성소리가 들리고 있다고합니다. 이것이 미국의 신디케이트 실험의 끝일까요?"
+worldnews.252.a:0 "우리의 마지막 사람이 항복할때까지 싸움은 끝나지 않을것이다!"
 worldnews.252.c:0 "With such a victory on the Syndicalist traitors, the federal troops will soon be upon us."
 worldnews.252.e:0 "This is a great relief. The Great Lakes, and America, will soon be secure again!"
 worldnews.252.f:0 "The workers of Chicago will soon meet head to head with American military police."
