--- a/Kaiserreich Korean Translation/localisation/KR_Afghanistan_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Afghanistan_l_english.yml
@@ -100,26 +100,26 @@ afg.19.d:0 "The war is over and borders are now safe. Nothing more disturb the s
 afg.19.a:0 "Welcome, gentlemen!"
 
 ### Parties ###
-AFG_totalist_party:0 "PIF"
-AFG_totalist_party_long:0 "Pro-Internationale Faction"
-AFG_syndycalist_party:0 "PIF"
-AFG_syndycalist_party_long:0 "Pro-Internationale Faction"
-AFG_radical_socialist_party:0 "RW"
-AFG_radical_socialist_party_long:0 "Radical Westernisers"
-AFG_social_democrat_party:0 "PWF"
-AFG_social_democrat_party_long:0 "Pro-Western Faction"
-AFG_social_liberal_party:0 "PWF"
-AFG_social_liberal_party_long:0 "Pro-Western Faction"
-AFG_market_liberal_party:0 "PWF"
-AFG_market_liberal_party_long:0 "Pro-Western Faction"
-AFG_social_conservative_party:0 "AF"
-AFG_social_conservative_party_long:0 "Academic Faction"
-AFG_authoritarian_democrat_party:0 "RG"
-AFG_authoritarian_democrat_long:0 "Royal Government"
-AFG_paternal_autocrat_party:0 "RG"
-AFG_paternal_autocrat_party_long:0 "Royal Government"
-AFG_national_populist_party:0 "RI"
-AFG_national_populist_party_long:0 "Radical Islamists"
+AFG_totalist_party:0 "친인터내셔널파"
+AFG_totalist_party_long:0 "친인터내셔널파"
+AFG_syndycalist_party:0 "친인터내셔널파"
+AFG_syndycalist_party_long:0 "친인터내셔널파"
+AFG_radical_socialist_party:0 "친서방급진파"
+AFG_radical_socialist_party_long:0 "친서방급진파"
+AFG_social_democrat_party:0 "친서방파"
+AFG_social_democrat_party_long:0 "친서방파"
+AFG_social_liberal_party:0 "친서방파"
+AFG_social_liberal_party_long:0 "친서방파"
+AFG_market_liberal_party:0 "친서방파"
+AFG_market_liberal_party_long:0 "친서방파"
+AFG_social_conservative_party:0 "아카데미파"
+AFG_social_conservative_party_long:0 "아카데미파"
+AFG_authoritarian_democrat_party:0 "왕실"
+AFG_authoritarian_democrat_long:0 "왕실"
+AFG_paternal_autocrat_party:0 "왕실"
+AFG_paternal_autocrat_party_long:0 "왕실"
+AFG_national_populist_party:0 "급진 이슬람주의자"
+AFG_national_populist_party_long:0 "급진 이슬람주의자"
 
 ### Tooltips ###
 AFG_chaos_tooltip:0 "This choice will put Afghanistan into chaos of rebellion. In case of government falls either Radical Islamist or Nadir Shah will rule the country." #into chaos of rebellion? what?
