--- a/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
@@ -434,12 +434,12 @@ USA_reconstruction_policy:0 "Reconstruction Policy"
 USA_army_rangers:0 "Army Ranger Corps"
 
 ### Parties ###
-USA_totalist_party:0 "ACP"
+USA_totalist_party:0 "미국 공산당"
 USA_totalist_party_long:0 "미국 공산당"
-USA_radical_socialist_party:0 "CSA"
-USA_radical_socialist_party_long:0 "미국 노조 연합"
-USA_syndicalist_party:0 "CSA"
-USA_syndicalist_party_long:0 "미국 노조 연합"
+USA_radical_socialist_party:0 "아메리카 노동 연맹"
+USA_radical_socialist_party_long:0 "아메리카 노동 연맹"
+USA_syndicalist_party:0 "아메리카 노동 연맹"
+USA_syndicalist_party_long:0 "아메리카 노동 연맹"
 USA_social_democrat_party:0 "공화당"
 USA_social_democrat_party_long:0 "공화당 진보파"
 USA_social_liberal_party:0 "민주당"
@@ -450,9 +450,9 @@ USA_social_conservative_party:0 "민주당"
 USA_social_conservative_party_long:0 "민주당 보수파"
 USA_authoritarian_democrat_party:0 "군사 평의회"
 USA_authoritarian_democrat_party_long:0 "군사 평의회"
-USA_paternal_autocrat_party:0 "AFP"
+USA_paternal_autocrat_party:0 "아메리카 우선당"
 USA_paternal_autocrat_party_long:0 "아메리카 우선당"
-USA_national_populist_party:0 "AFP"
+USA_national_populist_party:0 "아메리카 우선당"
 USA_national_populist_party_long:0 "아메리카 우선당"
 
 ### Opinion Modifiers ###
