--- a/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
@@ -272,34 +272,34 @@ TEX_political_conflicts:0 "Political Conflicts"
 TEX_army_rangers:0 "Army Ranger Corps"
 
 ### Parties ###
-TEX_totalist_party:0 "ACP"
-TEX_totalist_party_long:0 "American Communist Party"
-TEX_radical_socialist_party:0 "CSA"
-TEX_radical_socialist_party_long:0 "Combined Syndicates of America"
-TEX_syndicalist_party:0 "CSA"
-TEX_syndicalist_party_long:0 "Combined Syndicates of America"
-TEX_social_democrat_party:0 "SPA"
-TEX_social_democrat_party_long:0 "Socialist Party of America"
-TEX_social_liberal_party:0 "Democrats"
-TEX_social_liberal_party_long:0 "Democratic Party"
-TEX_market_liberal_party:0 "Republicans"
-TEX_market_liberal_party_long:0 "Republican Party"
-TEX_social_conservative_party:0 "AFP"
-TEX_social_conservative_party_long:0 "America First Party"
-TEX_authoritarian_democrat_party:0 "AFP"
-TEX_authoritarian_democrat_party_long:0 "America First Party"
-TEX_paternal_autocrat_party:0 "AFP"
-TEX_paternal_autocrat_party_long:0 "America First Party"
-TEX_national_populist_party:0 "AFP"
-TEX_national_populist_party_long:0 "America First Party"
-TEX_lindbergh_party:0 "Lindbergh's Faction"
-TEX_lindbergh_party_long:0 "Lindbergh's Faction in the America First Party"
-TEX_smith_party:0 "Smith's Faction"
-TEX_smith_party_long:0 "Smith's Faction in the America First Party"
-TEX_coughlin_party:0 "Father Coughlin's Faction"
-TEX_coughlin_party_long:0 "Father Coughlin's Faction in the America First Party"
-TEX_kuhn_party:0 "Pelley's Faction"
-TEX_kuhn_party_long:0 "Pelley's Faction in the America First Party"
+TEX_totalist_party:0 "미국 공산당"
+TEX_totalist_party_long:0 "미국 공산당"
+TEX_radical_socialist_party:0 "아메리카 노동 연맹"
+TEX_radical_socialist_party_long:0 "아메리카 노동 연맹"
+TEX_syndicalist_party:0 "아메리카 노동 연맹"
+TEX_syndicalist_party_long:0 "아메리카 노동 연맹"
+TEX_social_democrat_party:0 "미국 사회당"
+TEX_social_democrat_party_long:0 "미국 사회당"
+TEX_social_liberal_party:0 "민주당"
+TEX_social_liberal_party_long:0 "민주당"
+TEX_market_liberal_party:0 "공화당"
+TEX_market_liberal_party_long:0 "공화당"
+TEX_social_conservative_party:0 "아메리카 우선당"
+TEX_social_conservative_party_long:0 "아메리카 우선당"
+TEX_authoritarian_democrat_party:0 "아메리카 우선당"
+TEX_authoritarian_democrat_party_long:0 "아메리카 우선당"
+TEX_paternal_autocrat_party:0 "아메리카 우선당"
+TEX_paternal_autocrat_party_long:0 "아메리카 우선당"
+TEX_national_populist_party:0 "아메리카 우선당"
+TEX_national_populist_party_long:0 "아메리카 우선당"
+TEX_lindbergh_party:0 "린드버그 파벌"
+TEX_lindbergh_party_long:0 "아메리카 우선당의 린드버그 파벌"
+TEX_smith_party:0 "스미스 파벌"
+TEX_smith_party_long:0 "아메리카 우선당의 스미스 파벌"
+TEX_coughlin_party:0 "코울린 신부 파벌"
+TEX_coughlin_party_long:0 "아메리카 우선당의 코울린 신부 파벌"
+TEX_kuhn_party:0 "페일리 파벌"
+TEX_kuhn_party_long:0 "아메리카 우선당의 페일리 파벌"
 
 ### Opinion Modifiers ###
 TEX_SYND_STOP_COMM:0 "The American Union State wants to stop Syndicalism"
