--- a/Kaiserreich Korean Translation/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Baltic_Duchy_l_english.yml
@@ -447,29 +447,29 @@ balticduchy.211.a:0 "No more German yoke!"
 
 ### Parties ###
 
-BAT_totalist_party:0 "BTP"
-BAT_radical_socialist_party:0 "SPB"
-BAT_syndicalist_party:0 "UBS"
-BAT_social_democrat_party:0 "PP"
-BAT_social_liberal_party:0 "ABC"
-BAT_market_liberal_party:0 "BLP"
-BAT_social_conservative_party:0 "BCP"
-BAT_authoritarian_democrat_party:0 "NGP"
-BAT_paternal_autocrat_party:0 "Ducal Government"
-BAT_national_populist_party:0 "BB"
-BAT_totalist_party_long:0 "Baltic Totalist Party"
-BAT_radical_socialist_party_long:0 "Baltic Socialist Party"
-BAT_syndicalist_party_long:0 "United Baltic Syndicates"
-BAT_social_democrat_party_long:0 "Prosperity Party"
-BAT_social_liberal_party_long:0 "All-Baltic Coalition"
-BAT_market_liberal_party_long:0 "Baltic Liberal Party"
-BAT_social_conservative_party_long:0 "Baltic Conservative Party"
-BAT_authoritarian_democrat_party_long:0 "Nationalist German Party"
-BAT_paternal_autocrat_party_long:0 "Ducal Government"
-BAT_national_populist_party_long:0 "Baltic Brotherhood"
+BAT_totalist_party:0 "발트 전체주의자당"
+BAT_radical_socialist_party:0 "발트 사회당"
+BAT_syndicalist_party:0 "발트 노동조합 연합"
+BAT_social_democrat_party:0 "번영당"
+BAT_social_liberal_party:0 "전발트연합"
+BAT_market_liberal_party:0 " 자유당"
+BAT_social_conservative_party:0 "발트 보수당"
+BAT_authoritarian_democrat_party:0 "독일인 민족당"
+BAT_paternal_autocrat_party:0 "공작 정부"
+BAT_national_populist_party:0 "발트 형제단"
+BAT_totalist_party_long:0 "발트 전체주의자당"
+BAT_radical_socialist_party_long:0 "발트 사회당"
+BAT_syndicalist_party_long:0 "발트 노동조합 연합"
+BAT_social_democrat_party_long:0 "번영당"
+BAT_social_liberal_party_long:0 "전발트연합"
+BAT_market_liberal_party_long:0 "발트 자유당"
+BAT_social_conservative_party_long:0 "발트 보수당"
+BAT_authoritarian_democrat_party_long:0 "독일인 민족당"
+BAT_paternal_autocrat_party_long:0 "공작 정부"
+BAT_national_populist_party_long:0 "발트 형제단"
 
-BAT_FED_paternal_autocrat_party:0 "PG"
-BAT_FED_paternal_autocrat_party_long:0 "Provisional Government"
+BAT_FED_paternal_autocrat_party:0 "임시정부"
+BAT_FED_paternal_autocrat_party_long:0 "임시정부"
 
 BAT_RUS_national_populist_party:0 "SOP"
 BAT_RUS_national_populist_party_long:0 "Soyuz Osvobozdeniya Pribaltiki"
