--- a/Kaiserreich Korean Translation/localisation/KR_Bohemia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bohemia_l_english.yml
@@ -1,23 +1,23 @@
 ﻿l_english:
 
 ### Parties ###
-BOM_totalist_party:0 "CST"
+BOM_totalist_party:0 "체코전체주의당"
 BOM_totalist_party_long:0 "체코전체주의당"
-BOM_syndicalist_party:0 "CSS"
+BOM_syndicalist_party:0 "체코노동조합당"
 BOM_syndicalist_party_long:0 "체코노동조합당"
-BOM_radical_socialist_party:0 "CSS"
+BOM_radical_socialist_party:0 "체코사회당"
 BOM_radical_socialist_party_long:0 "체코사회당"
-BOM_social_democrat_party:0 "CSSD"
+BOM_social_democrat_party:0 "체코사회민주당"
 BOM_social_democrat_party_long:0 "체코사회민주당"
-BOM_social_liberal_party:0 "CSNS"
+BOM_social_liberal_party:0 "체코국민사회당"
 BOM_social_liberal_party_long:0 "체코국민사회당"
-BOM_market_liberal_party:0 "NSS"
+BOM_market_liberal_party:0 "국민자유당"
 BOM_market_liberal_party_long:0 "국민자유당"
-BOM_social_conservative_party:0 "CSL"
+BOM_social_conservative_party:0 "체코민중당"
 BOM_social_conservative_party_long:0 "체코민중당"
-BOM_authoritarian_democrat_party:0 "CND"
+BOM_authoritarian_democrat_party:0 "체코국민민주당"
 BOM_authoritarian_democrat_party_long:0 "체코국민민주당"
-BOM_paternal_autocrat_party:0 "NS"
+BOM_paternal_autocrat_party:0 "국민당"
 BOM_paternal_autocrat_party_long:0 "국민당"
-BOM_national_populist_party:0 "SNJ"
+BOM_national_populist_party:0 "국민통일당"
 BOM_national_populist_party_long:0 "국민통일당"
