--- a/Kaiserreich Korean Translation/localisation/KR_Ireland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ireland_l_english.yml
@@ -1,26 +1,26 @@
 ﻿l_english:
 
 ### Parties ###
-IRE_social_democrat_party:0 "SF"
-IRE_social_democrat_party_long:0 "Sinn Féin"
-IRE_syndicalist_party:0 "IWL"
-IRE_syndicalist_party_long:0 "Irish Worker League"
-IRE_social_conservative_party:0 "NCP"
-IRE_social_conservative_party_long:0 "National Centre Party"
-IRE_authoritarian_democrat_party:0 "FG"
-IRE_authoritarian_democrat_party_long:0 "Fine Gael"
-IRE_national_populist_party:0 "ICF"
-IRE_national_populist_party_long:0 "Irish Christian Front"
-IRE_social_liberal_party:0 "FF"
-IRE_social_liberal_party_long:0 "Fianna Fáil"
-IRE_paternal_autocrat_party:0 "ANH"
-IRE_paternal_autocrat_party_long:0 "Ailtirí na hAiséirghe"
-IRE_market_liberal_party:0 "CPNH"
-IRE_market_liberal_party_long:0 "Cumann Poblachta na hÉireann"
-IRE_radical_socialist_party:0 "SÉ"
-IRE_radical_socialist_party_long:0 "Saor Éire"
-IRE_totalist_party:0 "RWG"
-IRE_totalist_party_long:0 "Revolutionary Workers Group"
+IRE_social_democrat_party:0 "신페인"
+IRE_social_democrat_party_long:0 "신페인"
+IRE_syndicalist_party:0 "아일랜드 노동자 동맹"
+IRE_syndicalist_party_long:0 "아일랜드 노동자 동맹"
+IRE_social_conservative_party:0 "국민중앙당"
+IRE_social_conservative_party_long:0 "국민중앙당"
+IRE_authoritarian_democrat_party:0 "피너 게일"
+IRE_authoritarian_democrat_party_long:0 "피너 게일"
+IRE_national_populist_party:0 "아일랜드 기독 전선"
+IRE_national_populist_party_long:0 "아일랜드 기독 전선"
+IRE_social_liberal_party:0 "피어너 팔"
+IRE_social_liberal_party_long:0 "피어너 팔"
+IRE_paternal_autocrat_party:0 "알티리 너 하셰리"
+IRE_paternal_autocrat_party_long:0 알티리 너 하셰리 (부활설계당)"
+IRE_market_liberal_party:0 "쿠먼 포블라흐터 너 헤런"
+IRE_market_liberal_party_long:0 "쿠먼 포블라흐터 너 헤런 (아일랜드 공화주의 평의회)"
+IRE_radical_socialist_party:0 "스르 에이레"
+IRE_radical_socialist_party_long:0 "스르 에이레 (자유 아일랜드)"
+IRE_totalist_party:0 "혁명적 노동자 그룹"
+IRE_totalist_party_long:0 "혁명적 노동자 그룹"
 
 ### Leader Descriptions ###
 POLITICS_MICHAEL_COLLINS_DESC:0 "Michael Collins is the saviour and national hero of Ireland, with a combination of popularity and rigged elections keeping him in power. Born in Cork, Collins fought in the 1916 Easter Rising and afterwards became the president of the Irish Republican Brotherhood. During the war he organised the IRA into an effective guerrilla force, seeking to avoid the mistakes of 1916. In 1921 he was sent to negotiate the Anglo-Irish Treaty. Although by threatening to continue the war with German backing he was able to acquire all thirty-two counties in the treaty, he was unable to secure a republic, with the British fearing that an independent Irish republic would immediately become a German base. When he was expelled from Sinn Féin by Éamon de Valera he managed to form his own party, Fine Gael, which quickly overtook Sinn Féin in popularity. After the British Revolution he declared an independent Republic of Ireland and defeated a Unionist uprising in Ulster. Now with the Second Weltkrieg approaching Collins advocates revitalising Ireland's economy and military in order to assert Ireland's independence."
